# algorithm-video-generator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/algorithm_video_generator/: __init__.py  __main__.py  app.py  llm.py  manim_tools.py  models.py  prompts.py  settings_store.py  utils.py
src/algorithm_video_generator/api/: app.py  routes.py  schemas.py
src/algorithm_video_generator/core/: config.py
src/algorithm_video_generator/models/: domain.py
src/algorithm_video_generator/services/: generation.py
src/algorithm_video_generator/tts/: aliyun.py  audio.py
